--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "educator-js-codespace-template",
   "version": "1.0.0",
-  "description": "Educator JS Codespace Template",
+  "description": "Moxit Parmar",
   "source": "src/index.html",
   "homepage": "https://MoxitParmar.github.io/portfolio",
   "scripts": {
