--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "educator-js-codespace-template",
+  "name": "moxit-parmar-portfolio",
   "version": "1.0.0",
   "description": "Moxit Parmar",
   "source": "src/index.html",
